Updated the relax download page for version 1.3.2.

--- a/download.html
+++ b/download.html
@@ -99,16 +99,16 @@
       <td><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.1.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.1.GNU-Linux.i686.tar.bz2</a></td>
-      <td><tt><small>dcf4b3ec6e2682db2d7c6463ebc3aff0</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.1.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4682274</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.2.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.2.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>ac6d9e028627bcf1d7f844d5af16b050</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.2.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4688033</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.1.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.3.1.GNU-Linux.x86_64.tar.bz2</a></td>
-      <td><tt><small>8a1ddbf8ff099a8274cbc8fade8fdc02</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.1.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4680365</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.2.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.3.2.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>d09be7a7ed7c1cc42bf057e2b63893a7</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.2.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4739128</td>
     </tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.14.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.14.GNU-Linux.i686.tar.bz2</a></td>
@@ -156,10 +156,10 @@
       <td><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.1.Win32.zip" title="relax">relax-1.3.1.Win32.zip</a></td>
-      <td><tt><small>c617d92d24c6d48332b504d534f07b70</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.1.Win32.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>5149644</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.2.Win32.zip" title="relax">relax-1.3.2.Win32.zip</a></td>
+      <td><tt><small>00f58d3a783cb3a02e5b32ae0e448973</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.2.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>5149225</td>
     </tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.14.Win32.zip" title="relax">relax-1.2.14.Win32.zip</a></td>
@@ -236,10 +236,10 @@
     </tr>
     <tr><td>Bzip2 compressed TAR file</td></tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.1.src.tar.bz2" title="relax">relax-1.3.1.src.tar.bz2</a></td>
-      <td><tt><small>b60aa0313986802a6429f82e3c892851</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.1.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4674818</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.2.src.tar.bz2" title="relax">relax-1.3.2.src.tar.bz2</a></td>
+      <td><tt><small>b4ef915dfc3981a15607124f0513e120</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.2.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4732593</td>
     </tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.14.src.tar.bz2" title="relax">relax-1.2.14.src.tar.bz2</a></td>
@@ -250,10 +250,10 @@
 
     <tr><td>Zip file</td></tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.1.src.zip" title="relax">relax-1.3.1.zip</a></td>
-      <td><tt><small>a6ea1a691beeea251fc94896513b28a3</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.1.src.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>5098404</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.2.src.zip" title="relax">relax-1.3.2.zip</a></td>
+      <td><tt><small>a5e712cbaf7ca0706597382755a5a926</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.2.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>5158052</td>
     </tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.14.src.zip" title="relax">relax-1.2.14.src.zip</a></td>
@@ -307,34 +307,34 @@
     </tr>
     <tr><td><em>1.3 development line</em></td></tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.1.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.1.GNU-Linux.i686.tar.bz2</a></td>
-      <td><tt><small>dcf4b3ec6e2682db2d7c6463ebc3aff0</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.1.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4682274</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.2.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.2.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>ac6d9e028627bcf1d7f844d5af16b050</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.2.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4688033</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.1.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.3.1.GNU-Linux.x86_64.tar.bz2</a></td>
-      <td><tt><small>8a1ddbf8ff099a8274cbc8fade8fdc02</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.1.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4680365</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.2.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.3.2.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>d09be7a7ed7c1cc42bf057e2b63893a7</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.2.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4739128</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.1.Win32.zip" title="relax">relax-1.3.1.Win32.zip</a></td>
-      <td><tt><small>c617d92d24c6d48332b504d534f07b70</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.1.Win32.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>5149644</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.2.Win32.zip" title="relax">relax-1.3.2.Win32.zip</a></td>
+      <td><tt><small>00f58d3a783cb3a02e5b32ae0e448973</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.2.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>5149225</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.1.src.tar.bz2" title="relax">relax-1.3.1.src.tar.bz2</a></td>
-      <td><tt><small>b60aa0313986802a6429f82e3c892851</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.1.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4674818</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.2.src.tar.bz2" title="relax">relax-1.3.2.src.tar.bz2</a></td>
+      <td><tt><small>b4ef915dfc3981a15607124f0513e120</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.2.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4732593</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.1.src.zip" title="relax">relax-1.3.1.zip</a></td>
-      <td><tt><small>a6ea1a691beeea251fc94896513b28a3</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.1.src.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>5098404</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.2.src.zip" title="relax">relax-1.3.2.zip</a></td>
+      <td><tt><small>a5e712cbaf7ca0706597382755a5a926</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.2.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>5158052</td>
     </tr>
 
     <tr><td><em>Stable 1.2 line</em></td></tr>
@@ -413,6 +413,39 @@
       <td><strong>GPG signature</strong></td>
       <td><strong>File size (bytes)</strong></td>
     </tr>
+
+    <tr><td><em>Version 1.3.2</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.2.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.2.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>ac6d9e028627bcf1d7f844d5af16b050</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.2.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4688033</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.2.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.3.2.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>d09be7a7ed7c1cc42bf057e2b63893a7</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.2.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4739128</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.2.Win32.zip" title="relax">relax-1.3.2.Win32.zip</a></td>
+      <td><tt><small>00f58d3a783cb3a02e5b32ae0e448973</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.2.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>5149225</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.2.src.tar.bz2" title="relax">relax-1.3.2.src.tar.bz2</a></td>
+      <td><tt><small>b4ef915dfc3981a15607124f0513e120</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.2.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4732593</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.2.src.zip" title="relax">relax-1.3.2.zip</a></td>
+      <td><tt><small>a5e712cbaf7ca0706597382755a5a926</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.2.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>5158052</td>
+    </tr>
+
 
     <tr><td><em>Version 1.3.1</em></td></tr>
     <tr>
