--- a/download.html
+++ b/download.html
@@ -250,7 +250,7 @@
 
     <tr><td>Zip file</td></tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.2.src.zip" title="relax">relax-1.3.2.zip</a></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.2.src.zip" title="relax">relax-1.3.2.src.zip</a></td>
       <td><tt><small>a5e712cbaf7ca0706597382755a5a926</small></tt></td>
       <td><a href="http://download.gna.org/relax/relax-1.3.2.src.zip.sig" title="relax GPG signature">signature</a></td>
       <td>5158052</td>
@@ -331,7 +331,7 @@
       <td>4732593</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.2.src.zip" title="relax">relax-1.3.2.zip</a></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.2.src.zip" title="relax">relax-1.3.2.src.zip</a></td>
       <td><tt><small>a5e712cbaf7ca0706597382755a5a926</small></tt></td>
       <td><a href="http://download.gna.org/relax/relax-1.3.2.src.zip.sig" title="relax GPG signature">signature</a></td>
       <td>5158052</td>
@@ -440,7 +440,7 @@
       <td>4732593</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.2.src.zip" title="relax">relax-1.3.2.zip</a></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.2.src.zip" title="relax">relax-1.3.2.src.zip</a></td>
       <td><tt><small>a5e712cbaf7ca0706597382755a5a926</small></tt></td>
       <td><a href="http://download.gna.org/relax/relax-1.3.2.src.zip.sig" title="relax GPG signature">signature</a></td>
       <td>5158052</td>
