--- a/download.html
+++ b/download.html
@@ -133,9 +133,10 @@
             <li><a href="http://starship.python.net/~hinsen/ScientificPython/">Scientific Python</a> >= 2.2: <a href="http://sourcesup.cru.fr/frs/download.php/686/ScientificPython-2.4.11.tar.gz">ScientificPython-2.4.11.tar.gz</a></li>
           </ul>
 
-          <p>For the 1.3 releases, the following dependency is also needed.</p>
+          <p>For the 1.3 releases, the following dependencies are also needed.  Note than Numeric is only necessary for Scientific python, which itself is no longer essential.</p>
           <ul class="main_ul">
             <li><a href="https://gna.org/projects/minfx/">minfx</a> >= 1.0.1: <a  href="http://download.gna.org/minfx/minfx-1.0.1.tar.bz2">minfx-1.0.1.tar.bz2</a></li>
+            <li><a href="http://numpy.scipy.org/">numpy</a> >= 1.0.4: <a  href="http://sourceforge.net/project/showfiles.php?group_id=1369&package_id=175103">numpy downloads</a></li>
           </ul>
 
     </div>
@@ -179,9 +180,10 @@
             <li><a href="http://starship.python.net/crew/theller/ctypes/">ctypes</a> (pyreadline dependency): <a href="http://prdownloads.sourceforge.net/ctypes/ctypes-1.0.0.win32-py2.4.exe?download">ctypes-1.0.0.win32-py2.4.exe</a></li>
           </ul>
 
-          <p>For the 1.3 releases, the following dependency is also needed.</p>
+          <p>For the 1.3 releases, the following dependencies are also needed.  Note than Numeric is only necessary for Scientific python, which itself is no longer essential.</p>
           <ul class="main_ul">
             <li><a href="https://gna.org/projects/minfx/">minfx</a> >= 1.0.1: <a  href="http://download.gna.org/minfx/minfx-1.0.1.zip">minfx-1.0.1.zip</a></li>
+            <li><a href="http://numpy.scipy.org/">numpy</a> >= 1.0.4: <a  href="http://sourceforge.net/project/showfiles.php?group_id=1369&package_id=175103">numpy downloads</a></li>
           </ul>
 
 
@@ -210,11 +212,12 @@
             <li><a href="http://numpy.scipy.org">Numeric</a> >= 21: <a href="http://dirac.cnrs-orleans.fr/MacPackages/Numeric-23.7-py2.4-macosx10.3.zip">Numeric-23.7-py2.4-macosx10.3.zip</a></li>
             <li><a href="http://starship.python.net/~hinsen/ScientificPython/">Scientific Python</a> >= 2.2: <a href="http://dirac.cnrs-orleans.fr/MacPackages/ScientificPython-2.4.9-py2.4-macosx10.3.zip">ScientificPython-2.4.9-py2.4-macosx10.3.zip</a></li>
           </ul>
-          <p>For the 1.3 releases, the following dependency is also needed.</p>
+
+          <p>For the 1.3 releases, the following dependencies are also needed.  Note than Numeric is only necessary for Scientific python, which itself is no longer essential.</p>
           <ul class="main_ul">
             <li><a href="https://gna.org/projects/minfx/">minfx</a> >= 1.0.1: <a  href="http://download.gna.org/minfx/minfx-1.0.1.tar.gz">minfx-1.0.1.tar.gz</a></li>
+            <li><a href="http://numpy.scipy.org/">numpy</a> >= 1.0.4: <a  href="http://sourceforge.net/project/showfiles.php?group_id=1369&package_id=175103">numpy downloads</a></li>
           </ul>
-
 
     </div>
 
@@ -273,9 +276,10 @@
             <li><a href="http://starship.python.net/~hinsen/ScientificPython/">Scientific Python</a> >= 2.2: <a href="http://sourcesup.cru.fr/frs/download.php/686/ScientificPython-2.4.11.tar.gz">ScientificPython-2.4.11.tar.gz</a></li>
           </ul>
 
-          <p>For the 1.3 releases, the following dependency is also needed.</p>
+          <p>For the 1.3 releases, the following dependencies are also needed.  Note than Numeric is only necessary for Scientific python, which itself is no longer essential.</p>
           <ul class="main_ul">
             <li><a href="https://gna.org/projects/minfx/">minfx</a> >= 1.0.1: <a  href="http://download.gna.org/minfx/minfx-1.0.1.tar.bz2">minfx-1.0.1.tar.bz2</a></li>
+            <li><a href="http://numpy.scipy.org/">numpy</a> >= 1.0.4: <a  href="http://sourceforge.net/project/showfiles.php?group_id=1369&package_id=175103">numpy downloads</a></li>
           </ul>
 
          <h3 id="compilation">Compilation</h3>
