Added a new way to search all mailing list archives simultaneously using Google gadgets.

--- a/communication.html
+++ b/communication.html
@@ -103,6 +103,7 @@
 
       <p>The relax mailing lists can be searched using the Google search tool below.  These searches will not find the most recent posts and are dependent on when Google last indexed the mailing lists.</p>
 
+
       <!-- SiteSearch Google -->
       <form method=GET action="http://www.google.com/search">
       <input type=hidden name=ie value=UTF-8>
@@ -117,13 +118,20 @@
           <input type=text name=q size=50 maxlength=255 value="">
           <input type=submit name=btnG value="Google Search">
           <font size=-1>
-          <input type=hidden name=domains value="YOUR DOMAIN NAME"><br><input type=radio name=sitesearch value=""> WWW <input type=radio name=sitesearch value="https://mail.gna.org/public/relax-announce"> relax-announce <input type=radio name=sitesearch value="https://mail.gna.org/public/relax-users" checked> relax-users <input type=radio name=sitesearch value="https://mail.gna.org/public/relax-devel"> relax-devel <input type=radio name=sitesearch value="https://mail.gna.org/public/relax-commits"> relax-commits <br>
+          <input type=hidden name=domains value="YOUR DOMAIN NAME"><br><input type=radio name=sitesearch value=""> WWW <input type=radio name=sitesearch value="https://mail.gna.org/public/relax-announce"> relax-announce <input type=radio name=sitesearch value="https://mail.gna.org/public/relax-users" checked> relax-users <input type=radio name=sitesearch value="https://mail.gna.org/public/relax-devel"> relax-devel <input type=radio name=sitesearch value="https://mail.gna.org/public/relax-commits"> relax-commits </br>
           </font>
         </td>
       </tr>
       </table>
       </form>
       <!-- SiteSearch Google -->
+
+      <p>Alternatively all lists can be <a href="http://www.google.com/coop/cse?cx=000230621675959489540%3Aianvteuoucy">searched</a> simultaneously:</p>
+
+      <!-- Google gadget -->
+      <script src="http://www.gmodules.com/ig/ifr?url=http://www.google.com/coop/api/000230621675959489540/cse/ianvteuoucy/gadget&amp;synd=open&amp;w=320&amp;h=75&amp;title=All+relax+mailing+lists&amp;border=%23ffffff%7C3px%2C1px+solid+%23999999&amp;output=js"></script>
+
+
   </div>
 </div>
 
