Numerous HTML fixes identified by http://validator.w3.org/.

--- a/features.html
+++ b/features.html
@@ -66,7 +66,7 @@
 
    <p></p>
 
-  <div class="main_h2" id="primary refs">
+  <div class="main_h2" id="primary_refs">
    <h2>Literature</h2>
     <p>The primary references for the program relax are <a href="refs.html#dAuvergneGooley08a">d'Auvergne and Gooley, 2008a</a> and <a href="refs.html#dAuvergneGooley08b">d'Auvergne and Gooley, 2008b</a>.</p>
 
