--- a/docs.html
+++ b/docs.html
@@ -104,9 +104,9 @@
     <p>You can also search the HTML versions of the manuals using the Google search tool.</p>
 
     <!-- SiteSearch Google -->
-    <form method=GET action="http://www.google.com/search">
-    <input type=hidden name=ie value=UTF-8>
-    <input type=hidden name=oe value=UTF-8>
+    <form method="GET" action="http://www.google.com/search">
+    <input type="hidden" name="ie" value="UTF-8">
+    <input type="hidden" name="oe" value="UTF-8">
     <table bgcolor="#FFFFFF">
     <tr>
       <td>
@@ -114,10 +114,10 @@
         <img src="http://www.google.com/logos/Logo_40wht.gif" border="0" alt="Google"></a>
       </td>
       <td>
-        <input type=text name=q size=31 maxlength=255 value="">
-        <input type=submit name=btnG value="Google Search">
-        <font size=-1>
-        <input type=hidden name=domains value="YOUR DOMAIN NAME"><br><input type=radio name=sitesearch value=""> WWW <input type=radio name=sitesearch value="http://www.nmr-relax.com/manual/1.2" checked> relax 1.2 HTML manual <input type=radio name=sitesearch value="http://www.nmr-relax.com/manual/1.3"> relax 1.3 HTML manual <br>
+        <input type="text" name="q" size="31" maxlength="255" value="">
+        <input type="submit" name="btnG" value="Google Search">
+        <font size="-1">
+        <input type="hidden" name="domains" value="YOUR DOMAIN NAME"><br><input type="radio" name="sitesearch" value=""> WWW <input type="radio" name="sitesearch" value="http://www.nmr-relax.com/manual/1.2" checked> relax 1.2 HTML manual <input type="radio" name="sitesearch" value="http://www.nmr-relax.com/manual/1.3"> relax 1.3 HTML manual </br>
         </font>
       </td>
     </tr>
