More XHTML fixes.

--- a/communication.html
+++ b/communication.html
@@ -105,7 +105,7 @@
 
 
       <!-- SiteSearch Google -->
-      <form method="GET" action="http://www.google.com/search">
+      <form method="get" action="http://www.google.com/search">
       <input type="hidden" name="ie" value="UTF-8">
       <input type="hidden" name="oe" value="UTF-8">
       <table bgcolor="#FFFFFF">
@@ -118,7 +118,7 @@
           <input type="text" name="q" size="50" maxlength="255" value="">
           <input type="submit" name="btnG" value="Google Search">
           <font size="-1">
-          <input type="hidden" name="domains" value="YOUR DOMAIN NAME"><br><input type="radio" name="sitesearch" value=""> WWW <input type="radio" name="sitesearch" value="https://mail.gna.org/public/relax-announce"> relax-announce <input type="radio" name="sitesearch" value="https://mail.gna.org/public/relax-users" checked> relax-users <input type="radio" name="sitesearch" value="https://mail.gna.org/public/relax-devel"> relax-devel <input type="radio" name="sitesearch" value="https://mail.gna.org/public/relax-commits"> relax-commits </br>
+          <input type="hidden" name="domains" value="http://nmr-relax.com"><br><input type="radio" name="sitesearch" value=""> WWW <input type="radio" name="sitesearch" value="https://mail.gna.org/public/relax-announce"> relax-announce <input type="radio" name="sitesearch" value="https://mail.gna.org/public/relax-users" checked> relax-users <input type="radio" name="sitesearch" value="https://mail.gna.org/public/relax-devel"> relax-devel <input type="radio" name="sitesearch" value="https://mail.gna.org/public/relax-commits"> relax-commits </br>
           </font>
         </td>
       </tr>
