--- a/communication.html
+++ b/communication.html
@@ -106,19 +106,24 @@
 
       <!-- SiteSearch Google -->
       <form method="get" action="http://www.google.com/search">
-      <input type="hidden" name="ie" value="UTF-8">
-      <input type="hidden" name="oe" value="UTF-8">
-      <table bgcolor="#FFFFFF">
+      <input type="hidden" name="ie" value="UTF-8"/>
+      <input type="hidden" name="oe" value="UTF-8"/>
+      <table background-color="#ffffff">
       <tr>
         <td>
-          <a href="http://www.google.com/">
-          <img src="http://www.google.com/logos/Logo_40wht.gif" border="0" alt="Google"></a>
+          <a href="http://www.google.com/"><img src="http://www.google.com/logos/Logo_40wht.gif" border="0" alt="Google"/></a>
         </td>
         <td>
-          <input type="text" name="q" size="50" maxlength="255" value="">
-          <input type="submit" name="btnG" value="Google Search">
+          <input type="text" name="q" size="50" maxlength="255" value=""/>
+          <input type="submit" name="btnG" value="Google Search"/>
           <font size="-1">
-          <input type="hidden" name="domains" value="http://nmr-relax.com"><br><input type="radio" name="sitesearch" value=""> WWW <input type="radio" name="sitesearch" value="https://mail.gna.org/public/relax-announce"> relax-announce <input type="radio" name="sitesearch" value="https://mail.gna.org/public/relax-users" checked> relax-users <input type="radio" name="sitesearch" value="https://mail.gna.org/public/relax-devel"> relax-devel <input type="radio" name="sitesearch" value="https://mail.gna.org/public/relax-commits"> relax-commits </br>
+          <input type="hidden" name="domains" value="http://nmr-relax.com"/>
+            <br>
+            <input type="radio" name="sitesearch" value=""> WWW </input>
+            <input type="radio" name="sitesearch" value="https://mail.gna.org/public/relax-announce"> relax-announce </input>
+            <input type="radio" name="sitesearch" value="https://mail.gna.org/public/relax-users" checked> relax-users </input>
+            <input type="radio" name="sitesearch" value="https://mail.gna.org/public/relax-devel"> relax-devel </input>
+            <input type="radio" name="sitesearch" value="https://mail.gna.org/public/relax-commits"> relax-commits </input>
           </font>
         </td>
       </tr>
