--- a/docs.html
+++ b/docs.html
@@ -110,14 +110,14 @@
     <table background-color="#ffffff">
     <tr>
       <td>
-        <a href="http://www.google.com/"><img src="http://www.google.com/logos/Logo_40wht.gif" border="0" alt="Google"></a>
+        <a href="http://www.google.com/"><img src="http://www.google.com/logos/Logo_40wht.gif" border="0" alt="Google"/></a>
       </td>
       <td>
         <input type="text" name="q" size="31" maxlength="255" value=""/>
         <input type="submit" name="btnG" value="Google Search"/>
-        <font size="-1">
+        <font font-size="-1">
         <input type="hidden" name="domains" value="http://nmr-relax.com"/>
-          <br>
+          <br />
           <input type="radio" name="sitesearch" value=""> WWW </input>
           <input type="radio" name="sitesearch" value="http://www.nmr-relax.com/manual/1.2" checked> relax 1.2 HTML manual </input>
           <input type="radio" name="sitesearch" value="http://www.nmr-relax.com/manual/1.3"> relax 1.3 HTML manual </input>
