--- a/communication.html
+++ b/communication.html
@@ -108,7 +108,7 @@
       <form method="get" action="http://www.google.com/search">
       <input type="hidden" name="ie" value="UTF-8"/>
       <input type="hidden" name="oe" value="UTF-8"/>
-      <table background-color="#ffffff">
+      <table style="background-color:#ffffff">
       <tr>
         <td>
           <a href="http://www.google.com/"><img src="http://www.google.com/logos/Logo_40wht.gif" border="0" alt="Google"/></a>
@@ -116,7 +116,7 @@
         <td>
           <input type="text" name="q" size="50" maxlength="255" value=""/>
           <input type="submit" name="btnG" value="Google Search"/>
-          <font size="-1">
+          <font style="font-size:80%">
           <input type="hidden" name="domains" value="http://nmr-relax.com"/>
             <br />
             <input type="radio" name="sitesearch" value=""> WWW </input>
