--- a/docs.html
+++ b/docs.html
@@ -107,7 +107,7 @@
     <form method="get" action="http://www.google.com/search">
     <input type="hidden" name="ie" value="UTF-8"/>
     <input type="hidden" name="oe" value="UTF-8"/>
-    <table background-color="#ffffff">
+    <table style="background-color:#ffffff">
     <tr>
       <td>
         <a href="http://www.google.com/"><img src="http://www.google.com/logos/Logo_40wht.gif" border="0" alt="Google"/></a>
@@ -115,7 +115,7 @@
       <td>
         <input type="text" name="q" size="31" maxlength="255" value=""/>
         <input type="submit" name="btnG" value="Google Search"/>
-        <font font-size="-1">
+        <font style="font-size:80%">
         <input type="hidden" name="domains" value="http://nmr-relax.com"/>
           <br />
           <input type="radio" name="sitesearch" value=""> WWW </input>
