Some more CSS style fixes.

--- a/docs.html
+++ b/docs.html
@@ -110,7 +110,7 @@
     <table style="background-color:#ffffff">
     <tr>
       <td>
-        <a href="http://www.google.com/"><img src="http://www.google.com/logos/Logo_40wht.gif" border="0" alt="Google"/></a>
+        <a href="http://www.google.com/"><img src="http://www.google.com/logos/Logo_40wht.gif" style="border:0" alt="Google"/></a>
       </td>
       <td>
         <input type="text" name="q" size="31" maxlength="255" value=""/>
