--- a/communication.html
+++ b/communication.html
@@ -113,10 +113,9 @@
         <td>
           <a href="http://www.google.com/"><img src="http://www.google.com/logos/Logo_40wht.gif" style="border:0" alt="Google"/></a>
         </td>
-        <td>
+        <td style="font-size:80%">
           <input type="text" name="q" size="50" maxlength="255" value=""/>
           <input type="submit" name="btnG" value="Google Search"/>
-          <font style="font-size:80%">
           <input type="hidden" name="domains" value="http://nmr-relax.com"/>
             <br />
             <input type="radio" name="sitesearch" value=""> WWW </input>
@@ -124,7 +123,6 @@
             <input type="radio" name="sitesearch" value="https://mail.gna.org/public/relax-users" checked> relax-users </input>
             <input type="radio" name="sitesearch" value="https://mail.gna.org/public/relax-devel"> relax-devel </input>
             <input type="radio" name="sitesearch" value="https://mail.gna.org/public/relax-commits"> relax-commits </input>
-          </font>
         </td>
       </tr>
       </table>
