--- a/docs.html
+++ b/docs.html
@@ -112,16 +112,14 @@
       <td>
         <a href="http://www.google.com/"><img src="http://www.google.com/logos/Logo_40wht.gif" style="border:0" alt="Google"/></a>
       </td>
-      <td>
+      <td style="font-size:80%">
         <input type="text" name="q" size="31" maxlength="255" value=""/>
         <input type="submit" name="btnG" value="Google Search"/>
-        <font style="font-size:80%">
         <input type="hidden" name="domains" value="http://nmr-relax.com"/>
           <br />
           <input type="radio" name="sitesearch" value=""> WWW </input>
           <input type="radio" name="sitesearch" value="http://www.nmr-relax.com/manual/1.2" checked> relax 1.2 HTML manual </input>
           <input type="radio" name="sitesearch" value="http://www.nmr-relax.com/manual/1.3"> relax 1.3 HTML manual </input>
-        </font>
       </td>
     </tr>
     </table>
