Fixed the termination of the <input> tags.

--- a/communication.html
+++ b/communication.html
@@ -119,10 +119,10 @@
           <input type="hidden" name="domains" value="http://nmr-relax.com"/>
             <br />
             <input type="radio" name="sitesearch" value=""> WWW </input>
-            <input type="radio" name="sitesearch" value="https://mail.gna.org/public/relax-announce"> relax-announce </input>
-            <input type="radio" name="sitesearch" value="https://mail.gna.org/public/relax-users" checked> relax-users </input>
-            <input type="radio" name="sitesearch" value="https://mail.gna.org/public/relax-devel"> relax-devel </input>
-            <input type="radio" name="sitesearch" value="https://mail.gna.org/public/relax-commits"> relax-commits </input>
+            <input type="radio" name="sitesearch" value="https://mail.gna.org/public/relax-announce"/> relax-announce
+            <input type="radio" name="sitesearch" value="https://mail.gna.org/public/relax-users" checked/> relax-users
+            <input type="radio" name="sitesearch" value="https://mail.gna.org/public/relax-devel"/> relax-devel
+            <input type="radio" name="sitesearch" value="https://mail.gna.org/public/relax-commits"/> relax-commits
         </td>
       </tr>
       </table>
