--- a/docs.html
+++ b/docs.html
@@ -118,8 +118,8 @@
         <input type="hidden" name="domains" value="http://nmr-relax.com"/>
           <br />
           <input type="radio" name="sitesearch" value=""> WWW </input>
-          <input type="radio" name="sitesearch" value="http://www.nmr-relax.com/manual/1.2" checked> relax 1.2 HTML manual </input>
-          <input type="radio" name="sitesearch" value="http://www.nmr-relax.com/manual/1.3"> relax 1.3 HTML manual </input>
+          <input type="radio" name="sitesearch" value="http://www.nmr-relax.com/manual/1.2" checked/> relax 1.2 HTML manual
+          <input type="radio" name="sitesearch" value="http://www.nmr-relax.com/manual/1.3"/> relax 1.3 HTML manual
       </td>
     </tr>
     </table>
