Fixes for the 'checked' <input> tag attribute.

--- a/communication.html
+++ b/communication.html
@@ -120,7 +120,7 @@
             <br />
             <input type="radio" name="sitesearch" value=""> WWW </input>
             <input type="radio" name="sitesearch" value="https://mail.gna.org/public/relax-announce"/> relax-announce
-            <input type="radio" name="sitesearch" value="https://mail.gna.org/public/relax-users" checked/> relax-users
+            <input type="radio" name="sitesearch" value="https://mail.gna.org/public/relax-users" checked="checked"/> relax-users
             <input type="radio" name="sitesearch" value="https://mail.gna.org/public/relax-devel"/> relax-devel
             <input type="radio" name="sitesearch" value="https://mail.gna.org/public/relax-commits"/> relax-commits
         </td>
