Some more <input> tag fixes.

--- a/docs.html
+++ b/docs.html
@@ -117,7 +117,7 @@
         <input type="submit" name="btnG" value="Google Search"/>
         <input type="hidden" name="domains" value="http://nmr-relax.com"/>
           <br />
-          <input type="radio" name="sitesearch" value=""> WWW </input>
+          <input type="radio" name="sitesearch" value=""/> WWW
           <input type="radio" name="sitesearch" value="http://www.nmr-relax.com/manual/1.2" checked="checked"/> relax 1.2 HTML manual
           <input type="radio" name="sitesearch" value="http://www.nmr-relax.com/manual/1.3"/> relax 1.3 HTML manual
       </td>
