--- a/communication.html
+++ b/communication.html
@@ -118,7 +118,7 @@
           <input type="submit" name="btnG" value="Google Search"/>
           <input type="hidden" name="domains" value="http://nmr-relax.com"/>
             <br />
-            <input type="radio" name="sitesearch" value=""> WWW </input>
+            <input type="radio" name="sitesearch" value=""/> WWW
             <input type="radio" name="sitesearch" value="https://mail.gna.org/public/relax-announce"/> relax-announce
             <input type="radio" name="sitesearch" value="https://mail.gna.org/public/relax-users" checked="checked"/> relax-users
             <input type="radio" name="sitesearch" value="https://mail.gna.org/public/relax-devel"/> relax-devel
