Some fixes for the shift of the mailing list search from a major to a H2 section.

--- a/communication.html
+++ b/communication.html
@@ -72,8 +72,8 @@
 
       <p>A number of relax mailing lists exist, each serving a different purpose. These include the announcement list, the relax users list, the relax development list, and the relax committers list.</p>
 
-    <div class="main_box">
-     <h2 id="mailing_list_search">Searching the mailing lists</h2>
+    <div id="mailing_list_search" class="main_h2">
+     <h2>Searching the mailing lists</h2>
 
       <p>The relax mailing lists can be searched using the Google search tool below.  These searches will not find the most recent posts and are dependent on when Google last indexed the mailing lists.</p>
 
@@ -105,7 +105,7 @@
 
       <!-- Google gadget -->
       <script src="http://www.gmodules.com/ig/ifr?url=http://www.google.com/coop/api/000230621675959489540/cse/ianvteuoucy/gadget&amp;synd=open&amp;w=320&amp;h=75&amp;title=All+relax+mailing+lists&amp;border=%23ffffff%7C3px%2C1px+solid+%23999999&amp;output=js"></script>
-
+    </div>
 
 
     <div id="relax-announce" class="main_h2">
@@ -133,8 +133,6 @@
       <p>Remember to hit 'respond to all' so that the mailing list is included in the CC field when replying to a message on these lists.  Otherwise your message will only be sent to the original poster and will not return to the list.  Posts will only be accepted if sent to the relax-users or relax-devel mailing lists.</p>
     </div>
   </div>
-
-
 </div>
 
 <div class="clear"></div>
