--- a/download.html
+++ b/download.html
@@ -128,14 +128,14 @@
         <h3>Dependencies</h3>
           <p>If they exist, please install your distribution specific packages for the following dependencies.</p>
           <ul class="main_ul">
-            <li><a href="http://python.org">Python</a> >= 2.4: <a  href="http://www.python.org/ftp/python/2.4.3/Python-2.4.3.tar.bz2">Python-2.4.3.tar.bz2</a></li>
-            <li><a href="http://numpy.scipy.org">Numeric</a> >= 21: <a href="http://sourceforge.net/project/showfiles.php?group_id=1369&amp;package_id=1351">Sourceforge Numeric download page</a></li>
-            <li><a href="http://starship.python.net/~hinsen/ScientificPython/">Scientific Python</a> >= 2.2: <a href="http://sourcesup.cru.fr/frs/download.php/686/ScientificPython-2.4.11.tar.gz">ScientificPython-2.4.11.tar.gz</a></li>
+            <li><a href="http://python.org">Python</a> &gt;= 2.4: <a  href="http://www.python.org/ftp/python/2.4.3/Python-2.4.3.tar.bz2">Python-2.4.3.tar.bz2</a></li>
+            <li><a href="http://numpy.scipy.org">Numeric</a> &gt;= 21: <a href="http://sourceforge.net/project/showfiles.php?group_id=1369&amp;package_id=1351">Sourceforge Numeric download page</a></li>
+            <li><a href="http://starship.python.net/~hinsen/ScientificPython/">Scientific Python</a> &gt;= 2.2: <a href="http://sourcesup.cru.fr/frs/download.php/686/ScientificPython-2.4.11.tar.gz">ScientificPython-2.4.11.tar.gz</a></li>
           </ul>
 
           <p>For the 1.3 releases, the following dependencies are also needed.  Note than Numeric is only necessary for Scientific python, which itself is no longer essential.</p>
           <ul class="main_ul">
-            <li><a href="https://gna.org/projects/minfx/">minfx</a> >= 1.0.1: <a  href="http://download.gna.org/minfx/minfx-1.0.1.tar.bz2">minfx-1.0.1.tar.bz2</a></li>
+            <li><a href="https://gna.org/projects/minfx/">minfx</a> &gt;= 1.0.1: <a  href="http://download.gna.org/minfx/minfx-1.0.1.tar.bz2">minfx-1.0.1.tar.bz2</a></li>
             <li><a href="http://numpy.scipy.org/">numpy</a> >= 1.0.4: <a  href="http://sourceforge.net/project/showfiles.php?group_id=1369&package_id=175103">numpy downloads</a></li>
           </ul>
 
@@ -173,16 +173,16 @@
 
         <h3>Dependencies</h3>
           <ul class="main_ul">
-            <li><a href="http://python.org">Python</a> >= 2.4: <a href="http://www.python.org/ftp/python/2.4.3/python-2.4.3.msi">python-2.4.3.msi</a></li>
-            <li><a href="http://numpy.scipy.org">Numeric</a> >= 21: <a href="http://sourceforge.net/project/showfiles.php?group_id=1369&amp;package_id=1351">Sourceforge Numeric download page</a></li>
-            <li><a href="http://starship.python.net/~hinsen/ScientificPython/">Scientific Python</a> >= 2.2: <a href="http://sourcesup.cru.fr/frs/download.php/745/ScientificPython-2.4.9.win32-py2.4.exe">ScientificPython-2.4.9.win32-py2.4.exe</a></li>
+            <li><a href="http://python.org">Python</a> &gt;= 2.4: <a href="http://www.python.org/ftp/python/2.4.3/python-2.4.3.msi">python-2.4.3.msi</a></li>
+            <li><a href="http://numpy.scipy.org">Numeric</a> &gt;= 21: <a href="http://sourceforge.net/project/showfiles.php?group_id=1369&amp;package_id=1351">Sourceforge Numeric download page</a></li>
+            <li><a href="http://starship.python.net/~hinsen/ScientificPython/">Scientific Python</a> &gt;= 2.2: <a href="http://sourcesup.cru.fr/frs/download.php/745/ScientificPython-2.4.9.win32-py2.4.exe">ScientificPython-2.4.9.win32-py2.4.exe</a></li>
             <li><a href="http://projects.scipy.org/ipython/ipython/wiki/PyReadline/Intro">pyreadline</a>: <a href="http://ipython.scipy.org/dist/pyreadline-1.3.win32.exe">pyreadline-1.3.win32.exe</a></li>
             <li><a href="http://starship.python.net/crew/theller/ctypes/">ctypes</a> (pyreadline dependency): <a href="http://prdownloads.sourceforge.net/ctypes/ctypes-1.0.0.win32-py2.4.exe?download">ctypes-1.0.0.win32-py2.4.exe</a></li>
           </ul>
 
           <p>For the 1.3 releases, the following dependencies are also needed.  Note than Numeric is only necessary for Scientific python, which itself is no longer essential.</p>
           <ul class="main_ul">
-            <li><a href="https://gna.org/projects/minfx/">minfx</a> >= 1.0.1: <a  href="http://download.gna.org/minfx/minfx-1.0.1.zip">minfx-1.0.1.zip</a></li>
+            <li><a href="https://gna.org/projects/minfx/">minfx</a> &gt;= 1.0.1: <a  href="http://download.gna.org/minfx/minfx-1.0.1.zip">minfx-1.0.1.zip</a></li>
             <li><a href="http://numpy.scipy.org/">numpy</a> >= 1.0.4: <a  href="http://sourceforge.net/project/showfiles.php?group_id=1369&package_id=175103">numpy downloads</a></li>
           </ul>
 
@@ -208,14 +208,14 @@
 
         <h3>Dependencies</h3>
           <ul class="main_ul">
-            <li><a href="http://python.org">Python</a> >= 2.4: <a href="http://www.python.org/ftp/python/2.4.3/Universal-MacPython-2.4.3.dmg">Universal-MacPython-2.4.3.dmg</a></li>
-            <li><a href="http://numpy.scipy.org">Numeric</a> >= 21: <a href="http://dirac.cnrs-orleans.fr/MacPackages/Numeric-23.7-py2.4-macosx10.3.zip">Numeric-23.7-py2.4-macosx10.3.zip</a></li>
-            <li><a href="http://starship.python.net/~hinsen/ScientificPython/">Scientific Python</a> >= 2.2: <a href="http://dirac.cnrs-orleans.fr/MacPackages/ScientificPython-2.4.9-py2.4-macosx10.3.zip">ScientificPython-2.4.9-py2.4-macosx10.3.zip</a></li>
+            <li><a href="http://python.org">Python</a> &gt;= 2.4: <a href="http://www.python.org/ftp/python/2.4.3/Universal-MacPython-2.4.3.dmg">Universal-MacPython-2.4.3.dmg</a></li>
+            <li><a href="http://numpy.scipy.org">Numeric</a> &gt;= 21: <a href="http://dirac.cnrs-orleans.fr/MacPackages/Numeric-23.7-py2.4-macosx10.3.zip">Numeric-23.7-py2.4-macosx10.3.zip</a></li>
+            <li><a href="http://starship.python.net/~hinsen/ScientificPython/">Scientific Python</a> &gt;= 2.2: <a href="http://dirac.cnrs-orleans.fr/MacPackages/ScientificPython-2.4.9-py2.4-macosx10.3.zip">ScientificPython-2.4.9-py2.4-macosx10.3.zip</a></li>
           </ul>
 
           <p>For the 1.3 releases, the following dependencies are also needed.  Note than Numeric is only necessary for Scientific python, which itself is no longer essential.</p>
           <ul class="main_ul">
-            <li><a href="https://gna.org/projects/minfx/">minfx</a> >= 1.0.1: <a  href="http://download.gna.org/minfx/minfx-1.0.1.tar.gz">minfx-1.0.1.tar.gz</a></li>
+            <li><a href="https://gna.org/projects/minfx/">minfx</a> &gt;= 1.0.1: <a  href="http://download.gna.org/minfx/minfx-1.0.1.tar.gz">minfx-1.0.1.tar.gz</a></li>
             <li><a href="http://numpy.scipy.org/">numpy</a> >= 1.0.4: <a  href="http://sourceforge.net/project/showfiles.php?group_id=1369&package_id=175103">numpy downloads</a></li>
           </ul>
 
@@ -270,15 +270,15 @@
 
         <h3>Dependencies</h3>
           <ul class="main_ul">
-            <li><a href="http://python.org">Python</a> >= 2.4: <a href="http://www.python.org/download/releases/2.4.3/">Python 2.4.3 release page</a></li>
-            <li><a href="http://numpy.scipy.org">Numeric</a> >= 21: <a href="http://sourceforge.net/project/showfiles.php?group_id=1369&amp;package_id=1351">Sourceforge Numeric download page</a></li>
+            <li><a href="http://python.org">Python</a> &gt;= 2.4: <a href="http://www.python.org/download/releases/2.4.3/">Python 2.4.3 release page</a></li>
+            <li><a href="http://numpy.scipy.org">Numeric</a> &gt;= 21: <a href="http://sourceforge.net/project/showfiles.php?group_id=1369&amp;package_id=1351">Sourceforge Numeric download page</a></li>
 
-            <li><a href="http://starship.python.net/~hinsen/ScientificPython/">Scientific Python</a> >= 2.2: <a href="http://sourcesup.cru.fr/frs/download.php/686/ScientificPython-2.4.11.tar.gz">ScientificPython-2.4.11.tar.gz</a></li>
+            <li><a href="http://starship.python.net/~hinsen/ScientificPython/">Scientific Python</a> &gt;= 2.2: <a href="http://sourcesup.cru.fr/frs/download.php/686/ScientificPython-2.4.11.tar.gz">ScientificPython-2.4.11.tar.gz</a></li>
           </ul>
 
           <p>For the 1.3 releases, the following dependencies are also needed.  Note than Numeric is only necessary for Scientific python, which itself is no longer essential.</p>
           <ul class="main_ul">
-            <li><a href="https://gna.org/projects/minfx/">minfx</a> >= 1.0.1: <a  href="http://download.gna.org/minfx/minfx-1.0.1.tar.bz2">minfx-1.0.1.tar.bz2</a></li>
+            <li><a href="https://gna.org/projects/minfx/">minfx</a> &gt;= 1.0.1: <a  href="http://download.gna.org/minfx/minfx-1.0.1.tar.bz2">minfx-1.0.1.tar.bz2</a></li>
             <li><a href="http://numpy.scipy.org/">numpy</a> >= 1.0.4: <a  href="http://sourceforge.net/project/showfiles.php?group_id=1369&package_id=175103">numpy downloads</a></li>
           </ul>
 
