--- a/download.html
+++ b/download.html
@@ -136,7 +136,7 @@
           <p>For the 1.3 releases, the following dependencies are also needed.  Note than Numeric is only necessary for Scientific python, which itself is no longer essential.</p>
           <ul class="main_ul">
             <li><a href="https://gna.org/projects/minfx/">minfx</a> &gt;= 1.0.1: <a  href="http://download.gna.org/minfx/minfx-1.0.1.tar.bz2">minfx-1.0.1.tar.bz2</a></li>
-            <li><a href="http://numpy.scipy.org/">numpy</a> >= 1.0.4: <a  href="http://sourceforge.net/project/showfiles.php?group_id=1369&package_id=175103">numpy downloads</a></li>
+            <li><a href="http://numpy.scipy.org/">numpy</a> &gt;= 1.0.4: <a  href="http://sourceforge.net/project/showfiles.php?group_id=1369&package_id=175103">numpy downloads</a></li>
           </ul>
 
     </div>
@@ -183,7 +183,7 @@
           <p>For the 1.3 releases, the following dependencies are also needed.  Note than Numeric is only necessary for Scientific python, which itself is no longer essential.</p>
           <ul class="main_ul">
             <li><a href="https://gna.org/projects/minfx/">minfx</a> &gt;= 1.0.1: <a  href="http://download.gna.org/minfx/minfx-1.0.1.zip">minfx-1.0.1.zip</a></li>
-            <li><a href="http://numpy.scipy.org/">numpy</a> >= 1.0.4: <a  href="http://sourceforge.net/project/showfiles.php?group_id=1369&package_id=175103">numpy downloads</a></li>
+            <li><a href="http://numpy.scipy.org/">numpy</a> &gt;= 1.0.4: <a  href="http://sourceforge.net/project/showfiles.php?group_id=1369&package_id=175103">numpy downloads</a></li>
           </ul>
 
 
@@ -216,7 +216,7 @@
           <p>For the 1.3 releases, the following dependencies are also needed.  Note than Numeric is only necessary for Scientific python, which itself is no longer essential.</p>
           <ul class="main_ul">
             <li><a href="https://gna.org/projects/minfx/">minfx</a> &gt;= 1.0.1: <a  href="http://download.gna.org/minfx/minfx-1.0.1.tar.gz">minfx-1.0.1.tar.gz</a></li>
-            <li><a href="http://numpy.scipy.org/">numpy</a> >= 1.0.4: <a  href="http://sourceforge.net/project/showfiles.php?group_id=1369&package_id=175103">numpy downloads</a></li>
+            <li><a href="http://numpy.scipy.org/">numpy</a> &gt;= 1.0.4: <a  href="http://sourceforge.net/project/showfiles.php?group_id=1369&package_id=175103">numpy downloads</a></li>
           </ul>
 
     </div>
@@ -279,7 +279,7 @@
           <p>For the 1.3 releases, the following dependencies are also needed.  Note than Numeric is only necessary for Scientific python, which itself is no longer essential.</p>
           <ul class="main_ul">
             <li><a href="https://gna.org/projects/minfx/">minfx</a> &gt;= 1.0.1: <a  href="http://download.gna.org/minfx/minfx-1.0.1.tar.bz2">minfx-1.0.1.tar.bz2</a></li>
-            <li><a href="http://numpy.scipy.org/">numpy</a> >= 1.0.4: <a  href="http://sourceforge.net/project/showfiles.php?group_id=1369&package_id=175103">numpy downloads</a></li>
+            <li><a href="http://numpy.scipy.org/">numpy</a> &gt;= 1.0.4: <a  href="http://sourceforge.net/project/showfiles.php?group_id=1369&package_id=175103">numpy downloads</a></li>
           </ul>
 
          <h3 id="compilation">Compilation</h3>
