Added the missing 'type' attribute to the <script> Google gadget tag.

--- a/communication.html
+++ b/communication.html
@@ -104,7 +104,7 @@
       <p>Alternatively all lists can be <a href="http://www.google.com/coop/cse?cx=000230621675959489540%3Aianvteuoucy">searched</a> simultaneously:</p>
 
       <!-- Google gadget -->
-      <script src="http://www.gmodules.com/ig/ifr?url=http://www.google.com/coop/api/000230621675959489540/cse/ianvteuoucy/gadget&amp;synd=open&amp;w=320&amp;h=75&amp;title=All+relax+mailing+lists&amp;border=%23ffffff%7C3px%2C1px+solid+%23999999&amp;output=js"></script>
+      <script src="http://www.gmodules.com/ig/ifr?url=http://www.google.com/coop/api/000230621675959489540/cse/ianvteuoucy/gadget&amp;synd=open&amp;w=320&amp;h=75&amp;title=All+relax+mailing+lists&amp;border=%23ffffff%7C3px%2C1px+solid+%23999999&amp;output=js" type="text/javascript"></script>
     </div>
 
 
