--- a/download.html
+++ b/download.html
@@ -130,7 +130,7 @@
           <ul class="main_ul">
             <li><a href="http://python.org">Python</a> &gt;= 2.4: <a  href="http://www.python.org/ftp/python/2.4.3/Python-2.4.3.tar.bz2">Python-2.4.3.tar.bz2</a></li>
             <li><a href="http://numpy.scipy.org">Numeric</a> &gt;= 21: <a href="http://sourceforge.net/project/showfiles.php?group_id=1369&amp;package_id=1351">Sourceforge Numeric download page</a></li>
-            <li><a href="http://starship.python.net/~hinsen/ScientificPython/">Scientific Python</a> &gt;= 2.2: <a href="http://sourcesup.cru.fr/frs/download.php/686/ScientificPython-2.4.11.tar.gz">ScientificPython-2.4.11.tar.gz</a></li>
+            <li><a href="http://dirac.cnrs-orleans.fr/plone/software/scientificpython/">Scientific Python</a> &gt;= 2.2: <a href="http://sourcesup.cru.fr/frs/download.php/686/ScientificPython-2.4.11.tar.gz">ScientificPython-2.4.11.tar.gz</a></li>
           </ul>
 
           <p>For the 1.3 releases, the following dependencies are also needed.  Note than Numeric is only necessary for Scientific python, which itself is no longer essential.</p>
@@ -175,7 +175,7 @@
           <ul class="main_ul">
             <li><a href="http://python.org">Python</a> &gt;= 2.4: <a href="http://www.python.org/ftp/python/2.4.3/python-2.4.3.msi">python-2.4.3.msi</a></li>
             <li><a href="http://numpy.scipy.org">Numeric</a> &gt;= 21: <a href="http://sourceforge.net/project/showfiles.php?group_id=1369&amp;package_id=1351">Sourceforge Numeric download page</a></li>
-            <li><a href="http://starship.python.net/~hinsen/ScientificPython/">Scientific Python</a> &gt;= 2.2: <a href="http://sourcesup.cru.fr/frs/download.php/745/ScientificPython-2.4.9.win32-py2.4.exe">ScientificPython-2.4.9.win32-py2.4.exe</a></li>
+            <li><a href="http://dirac.cnrs-orleans.fr/plone/software/scientificpython/">Scientific Python</a> &gt;= 2.2: <a href="http://sourcesup.cru.fr/frs/download.php/745/ScientificPython-2.4.9.win32-py2.4.exe">ScientificPython-2.4.9.win32-py2.4.exe</a></li>
             <li><a href="http://projects.scipy.org/ipython/ipython/wiki/PyReadline/Intro">pyreadline</a>: <a href="http://ipython.scipy.org/dist/pyreadline-1.3.win32.exe">pyreadline-1.3.win32.exe</a></li>
             <li><a href="http://starship.python.net/crew/theller/ctypes/">ctypes</a> (pyreadline dependency): <a href="http://prdownloads.sourceforge.net/ctypes/ctypes-1.0.0.win32-py2.4.exe?download">ctypes-1.0.0.win32-py2.4.exe</a></li>
           </ul>
@@ -210,7 +210,7 @@
           <ul class="main_ul">
             <li><a href="http://python.org">Python</a> &gt;= 2.4: <a href="http://www.python.org/ftp/python/2.4.3/Universal-MacPython-2.4.3.dmg">Universal-MacPython-2.4.3.dmg</a></li>
             <li><a href="http://numpy.scipy.org">Numeric</a> &gt;= 21: <a href="http://dirac.cnrs-orleans.fr/MacPackages/Numeric-23.7-py2.4-macosx10.3.zip">Numeric-23.7-py2.4-macosx10.3.zip</a></li>
-            <li><a href="http://starship.python.net/~hinsen/ScientificPython/">Scientific Python</a> &gt;= 2.2: <a href="http://dirac.cnrs-orleans.fr/MacPackages/ScientificPython-2.4.9-py2.4-macosx10.3.zip">ScientificPython-2.4.9-py2.4-macosx10.3.zip</a></li>
+            <li><a href="http://dirac.cnrs-orleans.fr/plone/software/scientificpython/">Scientific Python</a> &gt;= 2.2: <a href="http://dirac.cnrs-orleans.fr/MacPackages/ScientificPython-2.4.9-py2.4-macosx10.3.zip">ScientificPython-2.4.9-py2.4-macosx10.3.zip</a></li>
           </ul>
 
           <p>For the 1.3 releases, the following dependencies are also needed.  Note than Numeric is only necessary for Scientific python, which itself is no longer essential.</p>
@@ -273,7 +273,7 @@
             <li><a href="http://python.org">Python</a> &gt;= 2.4: <a href="http://www.python.org/download/releases/2.4.3/">Python 2.4.3 release page</a></li>
             <li><a href="http://numpy.scipy.org">Numeric</a> &gt;= 21: <a href="http://sourceforge.net/project/showfiles.php?group_id=1369&amp;package_id=1351">Sourceforge Numeric download page</a></li>
 
-            <li><a href="http://starship.python.net/~hinsen/ScientificPython/">Scientific Python</a> &gt;= 2.2: <a href="http://sourcesup.cru.fr/frs/download.php/686/ScientificPython-2.4.11.tar.gz">ScientificPython-2.4.11.tar.gz</a></li>
+            <li><a href="http://dirac.cnrs-orleans.fr/plone/software/scientificpython/">Scientific Python</a> &gt;= 2.2: <a href="http://sourcesup.cru.fr/frs/download.php/686/ScientificPython-2.4.11.tar.gz">ScientificPython-2.4.11.tar.gz</a></li>
           </ul>
 
           <p>For the 1.3 releases, the following dependencies are also needed.  Note than Numeric is only necessary for Scientific python, which itself is no longer essential.</p>
