Updated the download page for relax 1.2.15.

--- a/download.html
+++ b/download.html
@@ -73,7 +73,7 @@
 
       <p>The current development release is relax version 1.3.2.</p>
 
-      <p>The current stable release is relax version 1.2.14.</p>
+      <p>The current stable release is relax version 1.2.15.</p>
 
       <p>For most analysis types, relaxation curve fitting, model-free analysis, etc., the development release is adequate and recommended.  If there are problems, a bug report can be <a href="https://gna.org/bugs/?group=relax">lodged</a> or the stable releases used.</p>
 
@@ -111,16 +111,16 @@
       <td>4739128</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.14.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.14.GNU-Linux.i686.tar.bz2</a></td>
-      <td><tt><small>002c43e5009ad38d1ac5109a7044c947</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.14.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4319669</td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.15.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.15.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>546e7b8cffed5e55f176a5f3c1edd382</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.15.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4319248</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.14.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.2.14.GNU-Linux.x86_64.tar.bz2</a></td>
-      <td><tt><small>67b79e6a2dfda74f844b87ea0d3bda76</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.14.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4316598</td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.15.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.2.15.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>21d2201b9f5b9b585a113199e182689b</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.15.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4318396</td>
     </tr>
   </tbody>
 </table>
@@ -163,10 +163,10 @@
       <td>5149225</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.14.Win32.zip" title="relax">relax-1.2.14.Win32.zip</a></td>
-      <td><tt><small>6f2d3ee98521957c640a435760ca5d40</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.14.Win32.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>4638800</td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.15.Win32.zip" title="relax">relax-1.2.15.Win32.zip</a></td>
+      <td><tt><small>1c30ff68127ad535011c0fbed41c8b8a</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.15.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>4640636</td>
     </tr>
   </tbody>
 </table>
@@ -245,10 +245,10 @@
       <td>4732593</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.14.src.tar.bz2" title="relax">relax-1.2.14.src.tar.bz2</a></td>
-      <td><tt><small>90a6d1ec563c68a5e08a4db769fcc325</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.14.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4310834</td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.15.src.tar.bz2" title="relax">relax-1.2.15.src.tar.bz2</a></td>
+      <td><tt><small>8bada4d509741c1834945a5ccf0f91c5</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.15.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4313126</td>
     </tr>
 
     <tr><td>Zip file</td></tr>
@@ -259,10 +259,10 @@
       <td>5158052</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.14.src.zip" title="relax">relax-1.2.14.src.zip</a></td>
-      <td><tt><small>4f0e768bc23d2c895387c87010818e98</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.14.src.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>4597884</td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.15.src.zip" title="relax">relax-1.2.15.src.zip</a></td>
+      <td><tt><small>a335e89b82d7e540894f369031232126</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.15.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>4599482</td>
     </tr>
   </tbody>
 </table>
@@ -343,34 +343,34 @@
 
     <tr><td><em>Stable 1.2 line</em></td></tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.14.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.14.GNU-Linux.i686.tar.bz2</a></td>
-      <td><tt><small>002c43e5009ad38d1ac5109a7044c947</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.14.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4319669</td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.15.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.15.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>546e7b8cffed5e55f176a5f3c1edd382</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.15.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4319248</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.14.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.2.14.GNU-Linux.x86_64.tar.bz2</a></td>
-      <td><tt><small>67b79e6a2dfda74f844b87ea0d3bda76</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.14.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4316598</td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.15.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.2.15.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>21d2201b9f5b9b585a113199e182689b</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.15.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4318396</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.14.Win32.zip" title="relax">relax-1.2.14.Win32.zip</a></td>
-      <td><tt><small>6f2d3ee98521957c640a435760ca5d40</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.14.Win32.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>4638800</td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.15.Win32.zip" title="relax">relax-1.2.15.Win32.zip</a></td>
+      <td><tt><small>1c30ff68127ad535011c0fbed41c8b8a</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.15.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>4640636</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.14.src.tar.bz2" title="relax">relax-1.2.14.src.tar.bz2</a></td>
-      <td><tt><small>90a6d1ec563c68a5e08a4db769fcc325</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.14.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4310834</td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.15.src.tar.bz2" title="relax">relax-1.2.15.src.tar.bz2</a></td>
+      <td><tt><small>8bada4d509741c1834945a5ccf0f91c5</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.15.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4313126</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.14.src.zip" title="relax">relax-1.2.14.src.zip</a></td>
-      <td><tt><small>4f0e768bc23d2c895387c87010818e98</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.14.src.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>4597884</td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.15.src.zip" title="relax">relax-1.2.15.src.zip</a></td>
+      <td><tt><small>a335e89b82d7e540894f369031232126</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.15.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>4599482</td>
     </tr>
 
   </tbody>
@@ -521,6 +521,38 @@
       <td><strong>MD5 checksum</strong></td>
       <td><strong>GPG signature</strong></td>
       <td><strong>File size (bytes)</strong></td>
+    </tr>
+
+    <tr><td><em>Version 1.2.15</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.15.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.15.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>546e7b8cffed5e55f176a5f3c1edd382</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.15.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4319248</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.15.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.2.15.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>21d2201b9f5b9b585a113199e182689b</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.15.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4318396</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.15.Win32.zip" title="relax">relax-1.2.15.Win32.zip</a></td>
+      <td><tt><small>1c30ff68127ad535011c0fbed41c8b8a</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.15.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>4640636</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.15.src.tar.bz2" title="relax">relax-1.2.15.src.tar.bz2</a></td>
+      <td><tt><small>8bada4d509741c1834945a5ccf0f91c5</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.15.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4313126</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.15.src.zip" title="relax">relax-1.2.15.src.zip</a></td>
+      <td><tt><small>a335e89b82d7e540894f369031232126</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.15.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>4599482</td>
     </tr>
 
     <tr><td><em>Version 1.2.14</em></td></tr>
