--- a/download.html
+++ b/download.html
@@ -128,7 +128,7 @@
         <h3>Dependencies</h3>
           <p>If they exist, please install your distribution specific packages for the following dependencies.</p>
           <ul class="main_ul">
-            <li><a href="http://python.org">Python</a> &gt;= 2.4: <a  href="http://www.python.org/ftp/python/2.4.3/Python-2.4.3.tar.bz2">Python-2.4.3.tar.bz2</a></li>
+            <li><a href="http://python.org">Python</a> &gt;= 2.4 (excluding &gt;= 3.0): <a  href="http://www.python.org/ftp/python/2.6.2/Python-2.6.2.tar.bz2">Python-2.6.2.tar.bz2</a></li>
             <li><a href="http://sourcesup.cru.fr/projects/scientific-py/">Scientific Python</a> (optional) &gt;= 2.8: <a href="http://sourcesup.cru.fr/frs/download.php/2309/ScientificPython-2.8.tar.gz">ScientificPython-2.8.tar.gz</a></li>
           </ul>
 
@@ -172,7 +172,7 @@
 
         <h3>Dependencies</h3>
           <ul class="main_ul">
-            <li><a href="http://python.org">Python</a> &gt;= 2.4: <a href="http://www.python.org/ftp/python/2.4.3/python-2.4.3.msi">python-2.4.3.msi</a></li>
+            <li><a href="http://python.org">Python</a> &gt;= 2.4 (excluding &gt;= 3.0): <a href="http://www.python.org/ftp/python/2.6.2/python-2.6.2.msi">python-2.6.2.msi</a></li>
             <li><a href="http://sourcesup.cru.fr/projects/scientific-py/">Scientific Python</a> (optional) &gt;= 2.8: <a href="http://sourcesup.cru.fr/frs/download.php/2309/ScientificPython-2.8.tar.gz">ScientificPython-2.8.tar.gz</a></li>
             <li><a href="http://projects.scipy.org/ipython/ipython/wiki/PyReadline/Intro">pyreadline</a>: <a href="http://ipython.scipy.org/dist/pyreadline-1.3.win32.exe">pyreadline-1.3.win32.exe</a></li>
             <li><a href="http://starship.python.net/crew/theller/ctypes/">ctypes</a> (pyreadline dependency): <a href="http://prdownloads.sourceforge.net/ctypes/ctypes-1.0.0.win32-py2.4.exe?download">ctypes-1.0.0.win32-py2.4.exe</a></li>
@@ -206,7 +206,7 @@
 
         <h3>Dependencies</h3>
           <ul class="main_ul">
-            <li><a href="http://python.org">Python</a> &gt;= 2.4: <a href="http://www.python.org/ftp/python/2.4.3/Universal-MacPython-2.4.3.dmg">Universal-MacPython-2.4.3.dmg</a></li>
+            <li><a href="http://python.org">Python</a> &gt;= 2.4 (excluding &gt;= 3.0): <a href="http://www.python.org/ftp/python/2.6.2/python-2.6.2-macosx2009-04-16.dmg">python-2.6.2-macosx2009-04-16.dmg</a></li>
             <li><a href="http://sourcesup.cru.fr/projects/scientific-py/">Scientific Python</a> (optional) &gt;= 2.8: <a href="http://sourcesup.cru.fr/frs/download.php/2309/ScientificPython-2.8.tar.gz">ScientificPython-2.8.tar.gz</a></li>
           </ul>
 
@@ -267,7 +267,7 @@
 
         <h3>Dependencies</h3>
           <ul class="main_ul">
-            <li><a href="http://python.org">Python</a> &gt;= 2.4: <a href="http://www.python.org/download/releases/2.4.3/">Python 2.4.3 release page</a></li>
+            <li><a href="http://python.org">Python</a> &gt;= 2.4 (excluding &gt;= 3.0): <a href="http://www.python.org/download/releases/2.6.2/">Python 2.6.2 release page</a></li>
             <li><a href="http://sourcesup.cru.fr/projects/scientific-py/">Scientific Python</a> (optional) &gt;= 2.8: <a href="http://sourcesup.cru.fr/frs/download.php/2309/ScientificPython-2.8.tar.gz">ScientificPython-2.8.tar.gz</a></li>
           </ul>
 
